fixing some contrast issues

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -83,9 +83,17 @@ ul {
   width: 100%;
   border-radius: 25px;
   object-fit: cover;
-  filter: brightness(0.8);
+  filter: brightness(0.9);
 }
 .banner h1, .about__banner h1 {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 140%);
+  border-radius: 25px;
+  padding: 0 10px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 100%;
   display: flex;
   position: absolute;
   color: #FFFFFF;
@@ -101,8 +109,8 @@ ul {
     border-radius: 10px;
   }
   .banner h1, .about__banner h1 {
+    border-radius: 10px;
     font-size: 36px;
-    margin: 0 10px 0 10px;
   }
 }
 @media screen and (max-width: 480px) {
@@ -111,6 +119,7 @@ ul {
   }
   .banner h1 {
     font-size: 24px;
+    text-align: left;
   }
 }
 .error {
@@ -154,18 +163,22 @@ ul {
   height: 100%;
   object-fit: cover;
   border-radius: 10px;
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
-  filter: brightness(0.8);
+  filter: brightness(0.9);
 }
-.home__cards--card p {
-  color: #FFFFFF;
+.home__cards--title {
   position: absolute;
   margin: 0;
   padding: 0;
-  bottom: 5.88%;
-  left: 5.88%;
-  right: 5.88%;
+  width: 100%;
   top: 80%;
+  bottom: 0;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+  border-radius: 10px;
+}
+.home__cards--title p {
+  margin: 0;
+  padding: 10px 15px;
+  color: #FFFFFF;
 }
 
 @media screen and (max-width: 768px) {
@@ -178,6 +191,8 @@ ul {
   position: relative;
   display: flex;
   justify-content: center;
+  border-radius: 25px;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 }
 .carrousel__images {
   width: 100%;
@@ -289,6 +304,9 @@ footer p {
   gap: 20px;
   align-items: center;
 }
+.apartment__detail__host--name p {
+  text-align: right;
+}
 .apartment__detail__host--name img {
   height: 64px;
   border-radius: 100%;
@@ -296,7 +314,10 @@ footer p {
 .apartment__detail__host--rating {
   margin-top: 10px;
   display: flex;
-  justify-content: space-between;
+  justify-content: right;
+}
+.apartment__detail__host--rating img {
+  margin-left: 5px;
 }
 .apartment__dropdown {
   display: flex;
