--- a/src/styles/sass/component/_banner.scss
+++ b/src/styles/sass/component/_banner.scss
@@ -1,5 +1,6 @@
 //banner for desktop display
 .banner, .about__banner{
+    
     margin-top:100px;
     display: flex;
     position: relative;
@@ -11,10 +12,18 @@
         width: 100%;
         border-radius: 25px;
         object-fit: cover;
-        filter:brightness(0.8);//change brightness of the img
+        filter:brightness(0.9);//change brightness of the img
     }
     
     & h1{
+        background:linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 140%);
+        border-radius: 25px;
+        padding: 0 10px;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+        height: 100%;
         display: flex;
         position: absolute;
         color:$white-color;
@@ -23,8 +32,6 @@
     }
     
 }
-
-
 
 //banner for tablet display
 @include tablet-display($max-width-tablet){
@@ -36,9 +43,8 @@
         }
 
         & h1{
-            font-size: 36px;
-            margin: 0 10px 0 10px;
-            
+            border-radius: 10px;
+            font-size: 36px;            
         }
     }
 }
@@ -53,7 +59,8 @@
         }
         
         & h1{
-            font-size: 24px;            
+            font-size: 24px; 
+            text-align: left;           
         }
     }    
 }
