--- a/src/styles/sass/component/_card.scss
+++ b/src/styles/sass/component/_card.scss
@@ -1,30 +1,41 @@
-.home__cards--card{      
-    position: relative;
-    margin: 30px; 
-    width: 340px;
-    height: 340px;
+.home__cards{
+    &--card{      
+        position: relative;
+        margin: 30px; 
+        width: 340px;
+        height: 340px;    
+        
     
-
-    & img{
-        width:100%;
-        height:100%;
-        object-fit: cover;
-        border-radius: 10px;
-        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
-        filter: brightness(0.8);
+        & img{
+            width:100%;
+            height:100%;
+            object-fit: cover;
+            border-radius: 10px;
+            filter: brightness(0.9);
+            
+        }        
     }
 
-    & p{
-        color: $white-color;
+    &--title{
         position: absolute;
         margin: 0;
         padding: 0;
-        bottom: 5.88%;
-        left: 5.88%;
-        right: 5.88%;
+        width: 100%;
         top: 80%;
+        bottom: 0;
+        background:linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+        border-radius: 10px;
+        
+        & p{
+            margin: 0;
+            padding: 10px 15px;
+            color: $white-color;
+            
+            
+        }
     }
 }
+
 
 //tablet and phone display
 @include tablet-display($max-width-tablet){
