--- a/src/styles/sass/component/_carrousel.scss
+++ b/src/styles/sass/component/_carrousel.scss
@@ -2,8 +2,11 @@
     position: relative; 
     display: flex;
     justify-content: center; 
+    border-radius: 25px;
+    background:linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 
     &__images{
+       
         width:100%;
         height:410px;
         object-fit: cover;
